--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".RecuperaPassword" />
         <activity android:name=".HomepageCittadino" />
         <activity android:name=".HomepageOperatoreEcologico" />
+        <activity android:name=".Calendario" />
     </application>
 
 </manifest>
