--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".HomepageOperatoreEcologico" />
         <activity android:name=".Calendario" />
         <activity android:name=".AreaPersonale" />
+        <activity android:name=".Statistiche" />
     </application>
 
 </manifest>
