--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".AreaPersonale" />
         <activity android:name=".Statistiche" />
         <activity android:name=".Contatti" />
+        <activity android:name=".Segnalazione" />
 
     </application>
 
