--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -31,6 +32,9 @@
         <activity android:name=".AreaPersonale" />
         <activity android:name=".Statistiche" />
         <activity android:name=".Contatti" />
+        <activity android:name=".SimpleScannerFragmentActivity" />
+        <activity android:name=".SimpleScannerActivity" />
+
 
     </application>
 
