--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
         <activity android:name=".VisualizzaMessaggioOperatoreEcologico" />
         <activity android:name=".ModificaCalendarioDipendenteComunale" />
         <activity android:name=".HomepageDipendenteComunale" />
-
+        <activity android:name=".CambiaTipologiaRifiuto" />
 
 
     </application>
