add Avvisi inviati dal comune

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,9 @@
         <activity android:name=".SegnalazioniDipendenteComunale" />
         <activity android:name=".DettagliSegnalazioneDCOperatore" />
         <activity android:name=".DettagliSegnalazioneDCCittadino" />
+        <activity android:name=".AvvisiInviatiDipendenteComunale" />
+        <activity android:name=".VisualizzaAvvisoDipendenteComunale" />
+        <activity android:name=".StatisticheDipendenteComunale" />
 
     </application>
 
